--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
-  "type": "module",
   "scripts": {
     "start": "node ./build/index.js",
     "build": "tsc -p .",
@@ -12,7 +11,6 @@
   "dependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
-    "@types/mongoose": "^5.11.97",
     "@types/node": "^20.5.8",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
@@ -23,5 +21,8 @@
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
+  },
+  "devDependencies": {
+    "@types/mongoose": "^5.11.97"
   }
 }
